[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/NOTE_assets/arrowRIGHT0000.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/notes/Editor Note Track.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/Note Editor.gd" type="Script" id=3]
[ext_resource path="res://assets/scenes/GUI Input Area.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/NOTE_assets/red0000.png" type="Texture" id=5]
[ext_resource path="res://assets/scenes/Lane Area.gd" type="Script" id=6]
[ext_resource path="res://assets/images/NOTE_assets/purple0000.png" type="Texture" id=7]
[ext_resource path="res://assets/images/NOTE_assets/blue0000.png" type="Texture" id=8]
[ext_resource path="res://assets/images/NOTE_assets/green0000.png" type="Texture" id=9]

[node name="Note Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main UI" type="Control" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 980.0
rect_min_size = Vector2( 0, 980 )

[node name="Track UI" type="Control" parent="VBoxContainer/Main UI"]
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note Track Background" type="ColorRect" parent="VBoxContainer/Main UI/Track UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.309804, 0.309804, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Main UI/Track UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Main UI/Track UI/HBoxContainer"]
margin_bottom = 980.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Main UI/Track UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer/Main UI/Track UI"]
anchor_right = 1.0
anchor_bottom = 1.0
editor_only = false

[node name="Arrow Track Control" type="Control" parent="VBoxContainer/Main UI/Track UI"]
anchor_left = 0.19
anchor_top = 0.1
anchor_right = 0.81
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy Track" type="Control" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Enemy Track"]
visible = false
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Enemy Track"]

[node name="Editor Note Track" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Enemy Track/Position2D" instance=ExtResource( 2 )]

[node name="Player Track" type="Control" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control"]
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Player Track"]
visible = false
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Player Track"]

[node name="Editor Note Track" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Player Track/Position2D" instance=ExtResource( 2 )]

[node name="Audio Waveforms" type="Control" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Enemy Vocals" type="Control" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Audio Waveforms"]

[node name="Instrumentals" type="Control" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Audio Waveforms"]
anchor_left = 0.5
anchor_right = 0.5

[node name="Player Vocals" type="Control" parent="VBoxContainer/Main UI/Track UI/Arrow Track Control/Audio Waveforms"]
anchor_left = 1.0
anchor_right = 1.0

[node name="Track Input Areas" type="Control" parent="VBoxContainer/Main UI/Track UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Enemy Track Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas"]
anchor_right = 0.38
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area"]
anchor_right = 0.255
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Left Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Left Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Left Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 1, 0, 1, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Left Lane Area/noteyah"]
texture = ExtResource( 7 )

[node name="Down Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area"]
anchor_left = 0.255
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Down Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Down Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Down Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 0, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Down Lane Area/noteyah"]
texture = ExtResource( 8 )

[node name="Up Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area"]
anchor_left = 0.5
anchor_right = 0.745
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Up Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Up Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Up Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 0, 1, 0, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Up Lane Area/noteyah"]
texture = ExtResource( 9 )

[node name="Right Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area"]
anchor_left = 0.745
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 1, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area/noteyah"]
texture = ExtResource( 5 )

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area" instance=ExtResource( 4 )]

[node name="Intrumental Track Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas"]
anchor_left = 0.38
anchor_right = 0.62
anchor_bottom = 1.0

[node name="Player Track Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas"]
anchor_left = 0.62
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Left Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area"]
anchor_right = 0.255
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Left Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Left Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Left Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 1, 0, 1, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Left Lane Area/noteyah"]
texture = ExtResource( 7 )

[node name="Down Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area"]
anchor_left = 0.255
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Down Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Down Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Down Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 0, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Down Lane Area/noteyah"]
texture = ExtResource( 8 )

[node name="Up Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area"]
anchor_left = 0.5
anchor_right = 0.745
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Up Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Up Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Up Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 0, 1, 0, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Up Lane Area/noteyah"]
texture = ExtResource( 9 )

[node name="Right Lane Area" type="Control" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area"]
anchor_left = 0.745
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Right Lane Area" instance=ExtResource( 4 )]

[node name="noteyah" type="Node2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Right Lane Area"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 78.8135, 105.5 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Right Lane Area/noteyah"]
points = PoolVector2Array( -5000, 0, 5000, 0 )
default_color = Color( 1, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Main UI/Track UI/Track Input Areas/Player Track Area/Right Lane Area/noteyah"]
texture = ExtResource( 5 )

[node name="GUI Input Area" parent="VBoxContainer/Main UI/Track UI" instance=ExtResource( 4 )]

[node name="Bottom Buttons" type="Control" parent="VBoxContainer"]
margin_top = 984.0
margin_right = 1920.0
margin_bottom = 1084.0
rect_min_size = Vector2( 0, 100 )

[connection signal="input_event" from="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area/GUI Input Area" to="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area" method="_on_GUI_Input_Area_input_event"]
[connection signal="mouse_entered" from="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area/GUI Input Area" to="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area" method="_on_GUI_Input_Area_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area/GUI Input Area" to="VBoxContainer/Main UI/Track UI/Track Input Areas/Enemy Track Area/Right Lane Area" method="_on_GUI_Input_Area_mouse_exited"]
